improve output format of BAND CP data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "wolf.disableHotModeWarning": true
+    "wolf.disableHotModeWarning": true,
+    "editor.tabSize": 4,
+    "editor.detectIndentation": true,
+    "python.defaultInterpreterPath": "/usr/local/bin/python3"
 }
