Add script to walk directory and process .rkf files with densf
- Implemented `walk_and_rename_rkf_files` function to traverse directories and generate new filenames for .rkf files.
- Added `execute_densf_commands` function to run densf commands for each file mapping.
- Included example usage to demonstrate functionality.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,14 @@
     "wolf.disableHotModeWarning": true,
     "editor.tabSize": 4,
     "editor.detectIndentation": true,
-    "python.defaultInterpreterPath": "/usr/local/bin/python3"
+    "python.defaultInterpreterPath": "/usr/local/bin/python3",
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        ".",
+        "-p",
+        "*test.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true
 }
